Extend the parser with conditional expressions, default expressions and tokens.

--- a/test/data/lang/expression/core/conditional/conditional02.txt
+++ b/test/data/lang/expression/core/conditional/conditional02.txt
@@ -1,7 +1,9 @@
-ThymeleafExpressionFile: conditional01.thel
+ThymeleafExpressionFile: conditional02.thel
   ConditionalExprImpl(CONDITIONAL_EXPR)
-    TokenExprImpl(TOKEN_EXPR)
-      PsiElement(token)('cond')
+    VariableExprImpl(VARIABLE_EXPR)
+      PsiElement(${)('${')
+      PsiElement(string)('cond')
+      PsiElement(})('}')
     PsiWhiteSpace(' ')
     PsiElement(?)('?')
     PsiWhiteSpace(' ')
