Improve the PSI. Add more operators.

--- a/test/data/lang/expression/core/conditional/conditional_02_with_variable_expression.txt
+++ b/test/data/lang/expression/core/conditional/conditional_02_with_variable_expression.txt
@@ -2,7 +2,7 @@ ThymeleafExpressionFile: conditional_02_with_variable_expression.thel
   ConditionalExprImpl(CONDITIONAL_EXPR)
     VariableExprImpl(VARIABLE_EXPR)
       PsiElement(${)('${')
-      PsiElement(string)('cond')
+      PsiElement(expression_string)('cond')
       PsiElement(})('}')
     PsiWhiteSpace(' ')
     PsiElement(?)('?')
