--- a/test/data/lang/expression/complex/selection_01_simple.txt
+++ b/test/data/lang/expression/complex/selection_01_simple.txt
@@ -1,5 +1,7 @@
 ThymeleafExpressionFile: selection_01_simple.thel
   SelectionExprImpl(SELECTION_EXPR)
     PsiElement(*{)('*{')
-    PsiElement(expression_string)('name')
+    ELExpressionHolder
+      ELVariable
+        PsiElement(EL_IDENTIFIER)('name')
     PsiElement(})('}')
