--- a/test/data/lang/expression/complex/selection_02_in_addition.txt
+++ b/test/data/lang/expression/complex/selection_02_in_addition.txt
@@ -3,7 +3,13 @@ ThymeleafExpressionFile: selection_02_in_addition.thel
     PlusExprImpl(PLUS_EXPR)
       SelectionExprImpl(SELECTION_EXPR)
         PsiElement(*{)('*{')
-        PsiElement(expression_string)('user.name')
+        ELExpressionHolder
+          ELSelectExpression
+            ELVariable
+              PsiElement(EL_IDENTIFIER)('user')
+            PsiElement(EL_DOT)('.')
+            ELVariable
+              PsiElement(EL_IDENTIFIER)('name')
         PsiElement(})('}')
       PsiWhiteSpace(' ')
       PsiElement(+)('+')
@@ -15,5 +21,7 @@ ThymeleafExpressionFile: selection_02_in_addition.thel
     PsiWhiteSpace(' ')
     SelectionExprImpl(SELECTION_EXPR)
       PsiElement(*{)('*{')
-      PsiElement(expression_string)('nationality')
+      ELExpressionHolder
+        ELVariable
+          PsiElement(EL_IDENTIFIER)('nationality')
       PsiElement(})('}')
