--- a/test/data/lang/expression/complex/variable_01_multi_path.txt
+++ b/test/data/lang/expression/complex/variable_01_multi_path.txt
@@ -1,5 +1,11 @@
 ThymeleafExpressionFile: variable_01_multi_path.thel
   VariableExprImpl(VARIABLE_EXPR)
     PsiElement(${)('${')
-    PsiElement(expression_string)('user.name')
+    ELExpressionHolder
+      ELSelectExpression
+        ELVariable
+          PsiElement(EL_IDENTIFIER)('user')
+        PsiElement(EL_DOT)('.')
+        ELVariable
+          PsiElement(EL_IDENTIFIER)('name')
     PsiElement(})('}')
